tests/paczka1/small_fuzzy/26262231.err
Error in line 2: PSLEDeml A944 31,3
Error in line 9: X94 A944 1,3,4
Error in line 6: X94 A944 69,9
